# synsort

./: .synsort_cache.json  README.md  pyproject.toml
src/synsort/: __init__.py  cache.py  cli.py  config.py  sorter.py
tests/: test_ast_integrity.py  test_complex_module.py  test_db_module.py
tests/data/: db.py  stubs.py
